# grpc_cplugplug_example

./: .gitignore  CMakeLists.txt  Makefile  config.yaml  lidar-data.grpc.pb.h  make-grpc.cmd  readme.txt  test_grpc_server.cpp  test_grpc_server.vcxproj  test_grpc_server.vcxproj.filters
3rd/cmdline/: cmdline.h
3rd/yaml/Release/: yaml-cpp.lib
grpc/: lidar-data.grpc.pb.cc  lidar-data.pb.cc  lidar-data.pb.h
grpc/proto/: camera-service.proto  lidar-data.proto
src/: CMakeLists.txt  MvCamera.cc  MvCamera.h  camera-service-config.h  camera-service.grpc.pb.cc  camera-service.grpc.pb.h  camera-service.pb.cc  camera-service.pb.h  camera_grpc_server.cc  camera_grpc_service.h  camera_service.cc  camera_service.h  camera_service_config.cc  main.cc  utils-logs.cpp  utils.cpp  utils.h  version.cpp  version.h
win/: camera-service.sln  camera-service.vcxproj  camera-service.vcxproj.filters
